@@ -1,9 +1,6 @@
 siehe zeile 5099: bei funktionen ist cddr(enventry) die liste von parametern, compiletime argcount check wär einfach
 runtime check brauchts wohl trotzdem für apply und higher order functions
 
-die ganzen protected methoden in MurmelJavaProgram erzwingen alle $access methoden
--> auf public stellen
-
 kompilierte programme: MurmelProgram.body() kann man nur 1x laufen lassen, ab dem zweiten aufruf kommt "duplicate define"
 -> alle globals am anfang von body() auf UNASSIGNED setzen, ggf. mittels generierter init-methode
 -> in lambdajbm erstmal labels statt defun
