@@ -1379,3 +1379,6 @@ in readerfehlern fehlt der filename
 
 (Object... args) darf ggf. nicht generiert werden, immer args+rsfx, weil sonst referenzieren freie variablen ggf. den falschen nestinglevel
 -> reparieren bzw. durch (Object... ignored) ersetzen
+
+die ganzen protected methoden in MurmelJavaProgram erzwingen alle $access methoden
+-> auf public stellen
